--- a/packages/bolt-toolkit-core/02-tools/tools-all/_tools.all.scss
+++ b/packages/bolt-toolkit-core/02-tools/tools-all/_tools.all.scss
@@ -6,6 +6,7 @@
 @import '@bolt/tools-font-weight';
 @import '@bolt/tools-sassy-maps';
 @import '@bolt/tools-font-kerning';
+@import '@bolt/tools-font-face';
 @import '@bolt/tools-spacing';
 @import '@bolt/tools-color-palette';
 @import '@bolt/tools-poly-fluid-sizing';
