--- a/packages/bolt-toolkit-core/03-generic/generic-all/_generic.all.scss
+++ b/packages/bolt-toolkit-core/03-generic/generic-all/_generic.all.scss
@@ -1,3 +1,4 @@
+@import '@bolt/generic-font-stacks';
 @import '@bolt/generic-global';
 @import '@bolt/generic-normalize';
 @import '@bolt/generic-reset';
