--- a/packages/website-jekyll/source/_includes/head.html
+++ b/packages/website-jekyll/source/_includes/head.html
@@ -10,6 +10,11 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
 
+  <link rel="preload" href="/fonts/opensans-subset.woff2" as="font" type="font/woff2" crossorigin>
+
+  <style>
+    {# include critical-path/bolt-critical-fonts.css #}
+  </style>
 
   {% if layout.custom_css %}
     {% for stylesheet in layout.custom_css %}
@@ -18,6 +23,10 @@
   {% else %}
     <link rel="stylesheet" href="{{ "/styles/bolt.css" | relative_url }}">
   {% endif %}
+
+  <script>
+    {% include critical-path/bolt-critical-path.min.js %}
+  </script>
 
   {% if jekyll.environment == 'production' and site.google_analytics %}
   {% include google-analytics.html %}
