WIP: removing compiled site from Git + updating xxlarge font size to 1.4 line height

--- a/packages/bolt-toolkit-core/01-settings/settings-font-size/_settings.font-size.scss
+++ b/packages/bolt-toolkit-core/01-settings/settings-font-size/_settings.font-size.scss
@@ -32,7 +32,8 @@ $bolt-font-size--xsmall: 0.8rem;
 
 
 $bolt-line-height--xxxlarge: 1.14;
-$bolt-line-height--xxlarge: 1.13;
+// $bolt-line-height--xxlarge: 1.13;
+$bolt-line-height--xxlarge: 1.4;
 $bolt-line-height--xlarge: 1.21;
 $bolt-line-height--large: 1.31;
 $bolt-line-height--medium: 1.65;
