WIP: stashing progress on chips and cards + new PL patch.

--- a/src/_patterns/02-components/components-chip-list/chip-list.twig
+++ b/src/_patterns/02-components/components-chip-list/chip-list.twig
@@ -15,7 +15,8 @@
   {% endfor %}
 
   {% set chipParams = chipParams | merge({
-    "items": inlineListItems
+    "items": inlineListItems,
+    size: "small"
   }) %}
 
   {% include "@bolt/inline-list.twig" with chipParams only %}
