--- a/src/_patterns/02-components/components-headline/src/_typography.twig
+++ b/src/_patterns/02-components/components-headline/src/_typography.twig
@@ -1,4 +1,4 @@
-{% set tags = ["h1", "h2", "h3", "h4", "h5", "h6", "p"] %} {# Allowed Tags #}
+{% set tags = ["h1", "h2", "h3", "h4", "h5", "h6", "p", "span"] %} {# Allowed Tags #}
 {% set weights = ["bold", "regular", "semibold"] %} {# Allowed Weights #}
 {% set types = ["headline", "subheadline", "eyebrow", "text"] %} {# Pre-defined types #}
 {% set transformProps = ["none", "uppercase", "lowercase", "capitalize"] %} {# Pre-defined text transform options #}
