--- a/src/_patterns/04-pages/d8-resource-details.twig
+++ b/src/_patterns/04-pages/d8-resource-details.twig
@@ -1,8 +1,120 @@
-{% set ecm_content %}
-  <h1>My awesome resource</h1>
-  <p>Other stuff</p>
-{% endset %}
+{% embed "@bolt/band.twig" with {
+  theme: "dark",
+  size: "medium"
+} %}
+  {% block band_content %}
 
+{% macro text(text, size, tag) %}
+  {% include "@bolt/text.twig" with {
+    text: text,
+    size: size  | default("medium"),
+    tag: tag | default("p")
+  } only %}
+{% endmacro %}
+{% import _self as bolt %}
+
+
+
+    {% grid "o-bolt-grid--center o-bolt-grid--large" %}
+      {% cell 'u-bolt-width-1/1 u-bolt-width-2/4@medium' %}
+
+        {% include "@bolt/eyebrow.twig" with {
+          text: "White Paper"
+        } only %}
+        {% include "@bolt/headline.twig" with {
+          text: "Unlock the Power of Your DMP",
+          size: "xxxlarge"
+        } only %}
+
+
+
+        {% include "@bolt/inline-list.twig" with {
+          delimeted: true,
+          items: [
+            {
+              "text": bolt.text("30 Pages", "small", "span")
+            },
+            {
+              "text": bolt.text("128kb PDF", "small", "span")
+            }
+          ]
+        } only %}
+        {% include "@bolt/button.twig" with {
+          text: "Download Now",
+          url: "https://www.pega.com/download-now",
+          style: "primary"
+        } only %}
+
+        
+      {% endcell %}
+
+      {% cell 'u-bolt-width-1/1 u-bolt-width-1/4@medium' %}
+        {% include "@bolt/image.twig" with {
+          src: "https://www.fillmurray.com/g/732/945"
+        } only %}
+      {% endcell %}
+        
+    {% endgrid %}
+
+  {% endblock %}
+{% endembed %}
+
+
+
+
+{% embed "@bolt/band.twig" with {
+  theme: "xlight",
+  size: "medium"
+} %}
+  {% block band_content %}
+    {% grid "o-bolt-grid--center" %}
+      {% cell 'u-bolt-width-1/1 u-bolt-width-2/3@medium' %}
+
+        {% include "@bolt/subheadline.twig" with {
+          text: "The foundational use cases that are unifying the worlds of adtech and martech.",
+          size: "xxlarge"
+        } only %}
+
+        {% include "@bolt/text.twig" with {
+          text: "Omni-channel customer journeys are increasingly recognized as the best practice standard by which organizations need to define, implement, and measure their marketing strategy and assign marketing spend. Maintaining advertising technology (adtech) and marketing technology (martech) silos creates technology, organizational, and capability gaps—preventing us from effectively driving toward coherent, profitable, and delightful customer experiences across both owned and paid media, throughout the entire customer life cycle. And yet, with the growing maturity of data management platform (DMP) implementations—combined with greater adoption and utilization of decision management platforms—these two unique worlds of adtech and martech can be bridged, with pre-built technology solutions that deliver new, previously unachievable use cases. By combining powerful DMP technology with advanced AI, marketing organizations can optimize ad spend, reduce attrition, improve acquisition rates, and increase revenues."
+        } only %}
+
+        {% include "@bolt/text.twig" with {
+          text: "Download this whitepaper to learn about:"
+        } only %}
+
+        <ul>
+          <li>The growing importance and demands of a unified adtech and martech world</li>
+          <li>Four foundational use cases for unifying your DMP</li>
+          <li>The role of decisioning technology</li>
+          <li>The unified DMP solution offered by Merkle | Comet and Pega® Customer Decision Hub, Pega’s decisioning technology—providing a bi-directional integration of your third-party DMP and marketing technology</li>
+        </ul>
+
+        <hr>
+
+
+        {% include "@bolt/eyebrow.twig" with {
+          text: "Category:",
+          weight: "bold"
+        } only %}
+      
+        {% include "@bolt/chip-list.twig" with {
+          "items": [
+            {
+              "text": "First tag",
+              "url": "yahoo.com"
+            },
+            {
+              "text": "second tag"
+            }
+          ]
+        } %}
+
+      {% endcell %}
+    {% endgrid %}
+
+  {% endblock %}
+{% endembed %}
 
 
 
@@ -11,7 +123,14 @@
   size: "small"
 } %}
   {% block band_content %}
-    {% grid %}
+    
+    {% include "@bolt/headline.twig" with {
+      text: "Related resources",
+      size: "xlarge",
+      tag: "h3"
+    } only %}
+
+    {% grid 'o-bolt-grid--flex' %}
       {% cell 'u-bolt-width-1/1 u-bolt-width-1/2@medium' %}
 
 
@@ -85,22 +204,6 @@
 
       {% endcell %}
     {% endgrid %}
-
-
-
-
-    {% include "@bolt/chip-list.twig" with {
-      "items": [
-        {
-          "text": "First tag",
-          "url": "yahoo.com"
-        },
-        {
-          "text": "second tag"
-        }
-      ]
-    } %}
-
 
   {% endblock %}
 {% endembed %}
