--- a/src/_patterns/02-components/bolt-headline/src/all-headlines.scss
+++ b/src/_patterns/02-components/bolt-headline/src/all-headlines.scss
@@ -1,10 +1,11 @@
-/**
-  */
+// BOLT HEADLINE COMPONENT
+
+@import '@bolt/tools-uppercase';
 @import '@bolt/tools-font-family';
 @import '@bolt/tools-font-weight';
 @import '@bolt/tools-font-size';
 @import '@bolt/tools-spacing';
-@import '@bolt/tools-uppercase';
+
 
 /* ------------------------------------ *\
    Headlines
@@ -21,34 +22,6 @@ $bolt-headline--plus-letter-spacing: 0.05rem;
 
 
 
-// // Placeholder for colors.
-// @mixin bolt-test-link-color {
-//   &:link {
-//     color: var(--bolt-test-color-secondary, $bolt-test-color-secondary);
-//   }
-
-//   &:visited {
-//     color: var(--bolt-test-color-secondary, inherit);
-//   }
-
-//   &:hover {
-//     color: var(--bolt-test-color-secondary, mix(white, $bolt-test-color-secondary, 35%));
-//   }
-
-//   &:active {
-//     color: var(--bolt-test-color-secondary, $bolt-test-color-secondary);
-//   }
-// }
-
-// // Placeholder for links
-
-// a {
-//   @include bolt-test-link-color;
-
-//   transition: all $bolt-test-transition;
-// }
-
-
 @mixin bolt-headline() {
   @include bolt-font-family(heading);
   display: block;
@@ -59,12 +32,12 @@ $bolt-headline--plus-letter-spacing: 0.05rem;
     align-items: center;
   }
 
+  /* stylelint-disable-next-line */
   > * {
     display: inline-flex;
     align-self: baseline;
   }
 }
-
 
 
 
@@ -82,7 +55,6 @@ $bolt-headline--plus-letter-spacing: 0.05rem;
     @include bolt-font-size(large);
   }
 }
-
 
 
 
@@ -163,18 +135,18 @@ $bolt-headline--plus-letter-spacing: 0.05rem;
 
 
 
-.c-bolt-headline--xxxlarge:not(:last-child) {
-  margin-bottom: bolt-v-spacing(medium) + bolt-v-spacing(xsmall);
+// Headline spacing with other elements.
+.c-bolt-headline + .c-bolt-subheadline,
+.c-bolt-headline:not(.c-bolt-headline--xxxlarge) + .c-bolt-text {
+  margin-top: (-1 * bolt-v-spacing(medium)) + bolt-v-spacing(xsmall);
 }
 
-// Headline styles.
-.c-bolt-headline + .c-bolt-subheadline,
-.c-bolt-headline + .c-bolt-text {
-  margin-top: bolt-v-spacing(medium) * -1 + bolt-v-spacing(xsmall);
+.c-bolt-headline--xxxlarge + .c-bolt-text {
+  margin-top: (-1 * bolt-v-spacing(medium)) + bolt-v-spacing(small);
 }
 
 .c-bolt-subheadline + .c-bolt-text {
-  margin-top: bolt-v-spacing(medium) * -1 + bolt-v-spacing(small);
+  margin-top: (-1 * bolt-v-spacing(medium)) + bolt-v-spacing(xsmall);
 }
 
 
