--- a/src/styles/_components.all.scss
+++ b/src/styles/_components.all.scss
@@ -9,6 +9,7 @@
 @import '@bolt/components-button-group';
 @import '@bolt/components-card';
 @import '@bolt/components-chip';
+@import '@bolt/components-background';
 // @import '@bolt/components-chip-list'; // No styles
 @import '@bolt/components-color-swatch';
 // @import '@bolt/components-critical-path'; // No styles
