--- a/src/_patterns/02-components/bolt-background/src/background.twig
+++ b/src/_patterns/02-components/bolt-background/src/background.twig
@@ -1,6 +1,6 @@
 <div class="c-bolt-background">
   <div class="c-bolt-background__item">
-    <img class="c-bolt-background__image" src="https://www.fillmurray.com/1600/900" alt="Bill">
+    <img class="c-bolt-background__image" src="https://www.pega.com/sites/pega.com/files/styles/max_width_2560/public/insurance-banner.jpg" alt="Hero">
   </div>
   <div class="c-bolt-background__overlay"></div>
 </div>
