--- a/src/_patterns/01-core/05-objects/02-layout/bolt-grid/_objects.grid.scss
+++ b/src/_patterns/01-core/05-objects/02-layout/bolt-grid/_objects.grid.scss
@@ -180,9 +180,9 @@
 
 
 .o-bolt-grid--matrix {
-  margin-bottom: bolt-spacing(medium) * -1;
+  margin-bottom: bolt-v-spacing(medium) * -1;
 }
 
 .o-bolt-grid--matrix > .o-bolt-grid__cell {
-  padding-bottom: bolt-spacing(medium);
+  padding-bottom: bolt-v-spacing(medium);
 }
