--- a/src/_patterns/02-components/bolt-headline/src/all-headlines.scss
+++ b/src/_patterns/02-components/bolt-headline/src/all-headlines.scss
@@ -58,6 +58,27 @@ $bolt-headline--plus-letter-spacing: 0.05rem;
 }
 
 
+// .c-bolt-headline--quoted > .c-bolt-headline__text:first-child,
+// .c-bolt-subheadline--quoted > .c-bolt-subheadline__text:first-child {
+//   text-indent: calc((1em / 2) * -1);
+//   display: inline-block;
+
+//   &:before,
+//   &:after {
+//     @include bolt-font-weight(bold);
+//     font-family: $bolt-font-family--serif;
+//   }
+
+//   &:before {
+//     content: '\201C';
+//   }
+
+//   &:after {
+//     content: '\201D';
+//   }
+// }
+
+
 
 .c-bolt-eyebrow {
   @include bolt-headline;
