--- a/src/_patterns/04-pages/d8-resource-details.twig
+++ b/src/_patterns/04-pages/d8-resource-details.twig
@@ -175,7 +175,7 @@
               ]
             }
           ]
-        } %}
+        } only %}
 
       {% endcell %}
 
@@ -201,7 +201,7 @@
                 }
               ]
             }
-        } %}
+        } only %}
 
       {% endcell %}
     {% endgrid %}
