--- a/src/_patterns/02-components/bolt-band/src/band--feature.twig
+++ b/src/_patterns/02-components/bolt-band/src/band--feature.twig
@@ -6,7 +6,7 @@
   {% block band_background %}{% endblock band_background %}
 
   {% block band_content %}
-    {% grid "o-bolt-grid--flex o-bolt-grid--middle o-bolt-grid--large o-bolt-grid--matrix" %}
+    {% grid "o-bolt-grid--flex o-bolt-grid--large o-bolt-grid--matrix" %}
 
       {% cell "u-bolt-width-1/1 u-bolt-width-2/3@small" %}
         {% if primaryTeaser %}
