--- a/src/_patterns/02-components/bolt-logo/src/logo.twig
+++ b/src/_patterns/02-components/bolt-logo/src/logo.twig
@@ -1,7 +1,9 @@
-<bolt-logo>
+<bolt-logo {% if invert %} class="c-bolt-logo--invert" {% endif %}>
   {% embed "@bolt/ratio.twig" %}
     {% block ratio_content %}
-      {{ include('@bolt/image.twig', { logo: logo }, with_context = false) }}
+      {{ include('@bolt/image.twig', { 
+        logo: logo
+      }, with_context = true) }}
     {% endblock %}
   {% endembed %}
 </bolt-logo>
